crates/crates_io_linecount/src/snapshots/crates_io_linecount__paths__tests__should_count_path-2.snap
---
source: crates/crates_io_linecount/src/paths.rs
expression: "PathDetails::from_path(Path::new(\"tests/integration.rs\"))"
---
PathDetails {
    is_benchmark: false,
    is_example: false,
    is_hidden: false,
    is_test: true,
    language_type: Some(
        Rust,
    ),
}
