crates/crates_io_linecount/src/snapshots/crates_io_linecount__paths__tests__should_count_path-4.snap
---
source: crates/crates_io_linecount/src/paths.rs
expression: "PathDetails::from_path(Path::new(\"benches/bench.rs\"))"
---
PathDetails {
    is_benchmark: true,
    is_example: false,
    is_hidden: false,
    is_test: false,
    language_type: Some(
        Rust,
    ),
}
